# shuffler

./: .gitignore  LICENSE  README.md  Subcommands.md  TODO.md  dataframe.py  dataframe_demo.ipynb  dataframe_demo.py  notebook_demo.ipynb  pipeline.py  pyproject.toml  shuffler.ipynb  shuffler.py
doc/: Crash-course.md  Extending-functionality.md  External-useful-commands.md  ExternalUsefulCommands.md  Operations.md  Subcommands.md  Tutorial-combining-datasets.md
doc/Crash-course/: crash-course.md  generate.sh
doc/Usercase-combining-datasets/: Usercase-combining-datasets.md
doc/Usercase-merge-annotations/: Usercase-merge-annotations.md
etc/bash_completion.d/: shuffler
interface/: dataframe.py  dataframe_demo.py  interfaceKeras.py  interfacePytorch.py  interfacePytorch_demo.py  interfacePytorch_test.py  shufflerDataset.py  shufflerDataset_test.py  utils.py  utils_test.py
interface/keras/: generators.py  generators_demo.py  generators_test.py
interface/pytorch/: datasets.py  datasets_demo.py  datasets_test.py  detectron2.py  detectron2_demo.py  detectron2_test.py
lib/: backendDb.py  backendDbUpgrade.py  backendDbUpgrade_test.py  backendDb_test.py  backendImages.py  backendKeyboard.py  backendMedia.py  backendMedia_test.py  backendScenes.py  dbDisplay.py  dbEvaluate.py  dbFilter.py  dbGui.py  dbInfo.py  dbKitti.py  dbLabel.py  dbLabelme.py  dbMedia.py  dbMedia_test.py  dbModify.py  dbPascal.py  dbPytorch.py  dbVideo.py  dbWrite.py  interfaceKeras.py  interfacePytorch.py  interfaceWriter.py  util.py  utilBoxes.py  utilBoxes_test.py  utilExpandBoxes.py  util_test.py  utilities.py
lib/backend/: backendDb.py  backendDbUpgrade.py  backendDbUpgrade_test.py  backendDb_test.py  backendMedia.py  backendMedia_test.py
lib/datasets/: dbBdd.py  dbCityscapes.py  dbCoco.py  dbDetrac.py  dbKitti.py  dbLabelme.py  (+1 more)
scenes/: MatchPoseToMap.py  MatchVideoToPose.py
shuffler/: __main__.py  pytest.ini  shuffler_cli.py
test/: README.md  test_backendDb.py  test_backendDbUpgrade.py  test_backendImage.py  test_backendMedia.py  test_shufflerDataset.py  test_utilities.py
tools/: DbUpgradeV3to4.py  ErodeMask.py  ErodeMaskImages.py  ErodeMaskVideo.py  EvaluateSegmentationOneImage.py  MakeCrossValidationSplits.sh  MakeGridFromVideos.py  MatchIdenticalImages.py  PlotDetectionCurvesFromCampaigns.py  PlotObjectNameHistograms.py  ReadAndSummarizeSrt.py  SubtractMask.py  images2video.py  multiplepictures2video.py  prob2graymask.py
(+256 files in other folders)
